# stonks

./: .gitignore  LICENSE  README.md  example.env  pyproject.toml
stonks/: app.py
stonks/helpers/: gpt_helper.py  pdf_helper.py  ui_helper.py  vector_db_helper.py
